--- a/css/styles.css
+++ b/css/styles.css
@@ -3,17 +3,33 @@
    #D0B8A8
    #7D6E83 */
 
+body{
+  background-image: url("https://images.unsplash.com/photo-1627793741864-1a9ec3ef2ba0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1429&q=80");
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: block;
+}
+
 html, body{
   padding: 0;
   margin: 0;
-  background-color: #D0B8A8;
   height: 100%;
   font-family: Outfit, 'sans-serif';
 }
 
 nav{
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: #F8EDE3;
-  padding: 10px;
+  padding: 1px;
+  border-radius: 10px;
+
+}
+
+nav button{
+  font-weight: bold;
+  font-size: 1.2rem;
 }
 
 .content-wrap{
@@ -22,14 +38,14 @@ nav{
   height: 100%;
 }
 
-#collage-bg{
-  opacity: 0.4;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 110%;
-}
+/*#collage-bg{*/
+/*  opacity: 0.4;*/
+/*  position: absolute;*/
+/*  left: 0;*/
+/*  top: 0;*/
+/*  width: 100%;*/
+/*  height: 110%;*/
+/*}*/
 
 label{
   display: inline-block;
